@@ -44,6 +44,7 @@ Cacti CHANGELOG
 -issue#5205: Cacti CSS file for Diff.css does look correct in all Cacti Themes
 -issue#5207: Deprecated error message during installation routine
 -issue#5208: Package form objects use the wrong text domain in their i18n strings
+-issue#5209: Add account disable log message for disabled users attempting to login
 -issue#5211: Undefined variable $user_id when creating new graph
 -issue#5223: Drop callback function sometimes puts name in the form input instead of the id
 -issue#5224: When poller run is exceeded by only a short period of time, Cacti does not round the number in the error
